@@ -2,8 +2,8 @@ import org.ajoberstar.grgit.Grgit
 import org.unbrokendome.gradle.plugins.testsets.dsl.testSets
 
 plugins {
-  id("org.unbroken-dome.test-sets") version "4.0.0"
-  id("com.google.cloud.tools.jib") version "3.3.2"
+  id("org.unbroken-dome.test-sets") version "4.1.0"
+  id("com.google.cloud.tools.jib") version "3.4.0"
   id("org.ajoberstar.grgit") version "5.2.0"
 }
 
@@ -22,7 +22,6 @@ jib {
     mainClass = "com.willmolloy.handbrake.cfr.Main"
     args = listOf("/input", "/output", "/archive")
     creationTime.set(gitCommitTime())
-    jvmFlags = listOf("--enable-preview")
   }
 }
 
